finish interest picker

--- a/homepage.html
+++ b/homepage.html
@@ -8,7 +8,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 	<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="app.js"></script>
+	
 </head>
 <body>
 	<nav class="navbar navbar-default">
@@ -40,53 +40,76 @@
 		<div class="row">
 			<div class="col-lg-12">
 				<div id="content">
-				<h1 id = "title">Skill-It</h1>
-				<h3 id = "lead">Learn, track, and practice your skill the easy way!</h3>
-				<hr id="hr1">
-				<form action="skills_list.html?#">
-                   <button class="btn btn-default btn-lg"><i class="fa fa-graduation-cap" aria-hidden="true"></i> Go To Skills List!</button>
-                </form>
-                </form>
+  				<h1 id = "title">Skill-It</h1>
+  				<h3 id = "lead">Learn, track, and practice your skill the easy way!</h3>
+  				<hr id="hr1">
+  				<form action="skills_list.html?#">
+                     <button class="btn btn-default btn-lg"><i class="fa fa-graduation-cap" aria-hidden="true"></i> Go To Skills List!</button>
+          </form>
 				</div>
 			</div>
 		</div>
 	</div>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
 
 
    <div class="modal fade" id="signUpModal" role="dialog">
        <div class="signDialog modal-dialog " role="document">
            <div class="modal-content">
-               <div class="modal-header">
-                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                 <h2 class="modal-title">Sign Up</h2>
-                 <p>Please fill in this form to create an account.</p>
-               </div>
+              <div class="signUp-step-info">
+                 <div class="modal-header">
+                   <button type="button" class="close" data-dismiss="modal">&times;</button>
+                   <h2 class="modal-title">Sign Up</h2>
+                   <p>Please fill in this form to create an account.</p>
+                 </div>
+                 <div class="modal-body">
+                   <form class="modal-form">
+                      <input class = "form-control inputText" type="text" placeholder="Enter Username" name="username" required>
 
-               <div class="modal-body">
-                 <form action="userpage.html" class="modal-form">
-                    <input class = "form-control inputText" type="text" placeholder="Enter Username" name="username" required>
+                     <input class = "form-control inputText" type="text" placeholder="Enter Email" name="email" required>
 
-                   <input class = "form-control inputText" type="text" placeholder="Enter Email" name="email" required>
+                     <input class = "form-control inputText" type="password" placeholder="Enter Password" name="psw" required>
 
-                   <input class = "form-control inputText" type="password" placeholder="Enter Password" name="psw" required>
+                     <input class = "form-control inputText" type="password" placeholder="Repeat Password" name="psw-repeat" required>
+                     
+                      <button class="btn btn-primary form-btn" id= "next_step" type="button">NEXT</button>
+                      <p>Already have an account?
+                          <a href="#" data-dismiss="modal" data-toggle="modal" data-target="#logInModal">Log In Here</a></p>
+                    </form>
+                 </div>
+                 <div class="modal-footer">
+                         <p>By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p>     
+                  </div>
+              </div>
 
-                   <input class = "form-control inputText" type="password" placeholder="Repeat Password" name="psw-repeat" required>
-                   <p>Already have an account?
-                        <a href="#" data-dismiss="modal" data-toggle="modal" data-target="#logInModal">Log In Here</a></p>
-                    <div class="modal-footer">
-                       <label>
-                           <input type="checkbox" checked="checked" name="remember"> Remember me
-                       </label>
-                       <p >By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p>
-                       <button class="btn btn-success btn-lg submitBtn" type="submit">GET STARTED</button>
+              <div class="signUp-step-interest_picker"> 
+                  <div class="modal-header">
+                     <button type="button" class="close" data-dismiss="modal">&times;</button>
+                     <h2 class="modal-title">Find the good stuff</h2>
+                     <p>Check out some interesting skill commuities and we recommend you subscribe to at least 5.</p>
                    </div>
-                  </form>
-               </div>
-
+                   <div class="modal-body">
+                      <ul class="list-group interest-item">
+                        <li class="list-group-item"> <img class = "icon-img"src="images/d5.jpg"> Laser Tag <button type="button" class="btn btn-info subscribe-btn">subscribe</button></li>
+                        <li class="list-group-item"> <img class = "icon-img"src="images/d1.jpg">  Cooking Entry <button type="button" class="btn btn-info subscribe-btn">subscribe</button></li>
+                        <li class="list-group-item"> <img class = "icon-img"src="images/d8.jpg"> Piano(mid-level) <button type="button" class="btn btn-info subscribe-btn">subscribe</button></li>
+                        <li class="list-group-item"> <img class = "icon-img"src="images/d4.jpeg"> Work Out Tips <button type="button" class="btn btn-info subscribe-btn">subscribe</button></li>
+                        <li class="list-group-item"> <img class = "icon-img"src="images/d7.jpeg"> Leather Working <button type="button" class="btn btn-info subscribe-btn">subscribe</button></li>
+                        <li class="list-group-item"> <img class = "icon-img"src="images/d3.jpg"> Ice Skating <button type="button" class="btn btn-info subscribe-btn">subscribe</button></li>
+                        <li class="list-group-item"> <img class = "icon-img"src="images/d2.jpg">  Guitar Playing <button type="button" class="btn btn-info subscribe-btn">subscribe</button></li>
+                        <li class="list-group-item"> <img class = "icon-img"src="images/d6.jpg"> Dance <button type="button" class="btn btn-info subscribe-btn">subscribe</button></li>
+                      </ul>
+                      <div class="progress">
+                        <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 0%;">
+                        </div>
+                      </div>
+                      <p class="item-count"><span id="count">0</span>/5 recommended subscription</p>
+                        <div class="step-choose">
+                          <button class="btn back-btn" id = "previous_step" type="button">BACK</button>
+                          <button class="btn btn-primary form-btn" type="submit" id="submit-btn">SUBMIT</button>
+                        </div>
+                    
+                   </div> 
+              </div>
            </div>
        </div>
    </div>
@@ -104,19 +127,17 @@
                    <input class = "form-control inputText" type="text" placeholder="Enter Email" name="email" required>
 
                    <input class = "form-control inputText" type="password" placeholder="Enter Password" name="psw" required>
-
+                   <button class="btn btn-primary form-btn" type="submit">LOG IN</button>
+                   <label>
+                       <input type="checkbox" checked="checked" name="remember"> Remember me
+                   </label>
                    <p>Don't have an account!
                         <a href="#" data-dismiss="modal" data-toggle="modal" data-target="#signUpModal"">Sign Up Here</a></p>
-                    <div class="modal-footer">
-                       <label>
-                           <input type="checkbox" checked="checked" name="remember"> Remember me
-                       </label>
-                       <button class="btn btn-success btn-lg submitBtn" type="submit">LOG IN</button>
-                   </div>
-               </div>
            </div>
        </div>
    </div>
 
+
+   <script type="text/javascript" src="app.js"></script>
 </body>
 </html>
