remove the back to top button
kind of useless

--- a/skills_list.html
+++ b/skills_list.html
@@ -150,13 +150,13 @@
 			</div>
 		</div>
 	<!-- //cart's-Product-Display -->
-		<div class="wthreecartaits wthreecartaits2 cart cart box_1">
+		<!-- <div class="wthreecartaits wthreecartaits2 cart cart box_1">
 			<form action="#" method="post" class="last">
 				<button class="w3view-cart" type="submit" name="submit" value="">back to top
 					<span class="fa fa-object-group" aria-hidden="true"></span>
 				</button>
 			</form>
-		</div>
+		</div> -->
 		<div class="copyright text-center">
 			<p>© 2018 Skill list All rights reserved | Design by NU students
 			</p>
