Added back to strategy page button

--- a/guitarpost.html
+++ b/guitarpost.html
@@ -38,6 +38,7 @@
         <span class="fa fa-object-group" aria-hidden="true"></span>Guitar Playing Strategies</h1>
         <div class="skill_desc">
           <h4><b>Description: </b>Check out these resources to help you learn new chords and songs!</h4>
+          <a class="btn btn-primary" href="guitar.html" role="button">Back to Strategy Page</a>
         </div>
           <hr>
       </div>
