icons added to group, search bar

--- a/group_play.html
+++ b/group_play.html
@@ -31,6 +31,12 @@
 	<ul class="list-group list-group-userplay">
   <li class="list-group-item d-flex justify-content-between align-items-center">
     <h4>Your Groups</h4>
+    <img src="images/info.png" class="infobutton">
+    <li class="list-group-item d-flex justify-content-between align-items-center">
+    <input type="text" name="search" class="search">
+    <img src="images/search.png" class="searchpic">
+    <span class="badge badge-primary badge-pill"></span>
+  </li>
   <li class="list-group-item list-group-item-info d-flex justify-content-between align-items-center">
     Group Play
     <span class="badge badge-primary badge-pill">0</span>
