move the search bar to the main page

--- a/skills_list.html
+++ b/skills_list.html
@@ -43,7 +43,7 @@
                   <a class="btn btn-default" href="skills_list.html?" role="button">All Skills/Groups</a>
                   <a href="#" data-toggle="modal" data-target="#exampleModalCenter"><span class="link-spanner"></span></a>
                 </form>
-                <div class="navbar-form navbar-left">
+                <!-- <div class="navbar-form navbar-left">
 	            	<button class="btn btn-default" data-toggle="modal" data-target="#myModal">
 						Add new skill
 					</button>
@@ -52,8 +52,9 @@
 			        <div class="form-group">
 			            <input id="searchtext" type="text" class="form-control" placeholder="Search">
 			        </div>
+			        &nbsp;&nbsp;
 					<button class="btn btn-default" type="submit" onclick="search()">Go</button>
-			    </form>
+			    </form> -->
             </div>
         </nav>
 	<div class="banner">
@@ -61,6 +62,21 @@
 			<h1 class="title-layouts">
 				<span class="fa fa-object-group" aria-hidden="true"></span>Skill List</h1>
 		</div>
+
+		<div class="banner-layer" style="margin-left: -13px;">
+			<div class="navbar-form navbar-left">
+            	<button class="btn btn-default" data-toggle="modal" data-target="#myModal">
+					Add new skill
+				</button>
+            </div>
+            <form action="#" type="post" class="navbar-form navbar-left" role="search">
+		        <div class="form-group">
+		            <input id="searchtext" type="text" class="form-control" placeholder="Search">
+		        </div>
+				<button class="btn btn-default" type="submit" onclick="search()">Find Groups</button>
+		    </form>
+		</div>
+		<br><br><br><br>
 		<div class="wthreeproductdisplay">
 			<div class="row">
 			  <div id="div1" class="col-sm-6 col-md-4">
