Added group_play link

--- a/skills_list.html
+++ b/skills_list.html
@@ -149,7 +149,7 @@
 			      <div class="caption">
 			        <h3>Guitar Playing</h3>
 			        <p><a href="guitar.html" class="btn btn-primary" role="button">Strategies</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-			        <a href="#" class="btn btn-primary" role="button">Groups</a> </p>
+			        <a href="group_play.html" class="btn btn-primary" role="button">Groups</a> </p>
 			      </div>
 			    </div>
 			  </div>
