Updated all skill/list button to be primary

--- a/skills_list.html
+++ b/skills_list.html
@@ -40,7 +40,7 @@
                     <button type="button" class="btn btn-success" href="#">Logout</button>
                 </div>
                 <form class="navbar-form navbar-left">
-                  <a class="btn btn-default" href="skills_list.html?" role="button">All Skills/Groups</a>
+                  <a class="btn btn-primary" href="skills_list.html?" role="button">All Skills/Groups</a>
                   <a href="#" data-toggle="modal" data-target="#exampleModalCenter"><span class="link-spanner"></span></a>
                 </form>
                 <!-- <div class="navbar-form navbar-left">
