--- a/userpage.html
+++ b/userpage.html
@@ -22,20 +22,11 @@
                     <button type="button" class="btn btn-success" href="#">Logout</button>
                 </div>
                 <form class="navbar-form navbar-left">
-                  <a class="btn btn-default" href="skills_list.html?" role="button">All Skills/Groups</a>
+                  <a class="btn btn-primary" href="skills_list.html?" role="button">All Skills/Groups</a>
                   <a href="#" data-toggle="modal" data-target="#exampleModalCenter"><span class="link-spanner"></span></a>
                 </form>
                 <div class="navbar-form navbar-left">
-                <button class="btn btn-default" data-toggle="modal" data-target="#myModal">
-            Add new skill
-          </button>
                 </div>
-                <form action="#" type="post" class="navbar-form navbar-left" role="search">
-              <div class="form-group">
-                  <input id="searchtext" type="text" class="form-control" placeholder="Search">
-              </div>
-          <button class="btn btn-default" type="submit" onclick="search()">Go</button>
-          </form>
             </div>
         </nav>
 
@@ -214,11 +205,11 @@
         Cookie Making
         <span class="badge badge-primary badge-pill">14</span>
       </button>
-      
+
     </div>
-    
+
   </div>
-  
+
 
 
 
