--- a/userpage.html
+++ b/userpage.html
@@ -2,14 +2,15 @@
 <html>
 <head>
 	<title> Skill-It </title>
-	<link rel="stylesheet" type="text/css" href="skills.css"/>
-  <link rel="stylesheet" type="text/css" href="userpage.css"/>
+
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="skills.css"/>
+  <link rel="stylesheet" type="text/css" href="userpage.css"/>
 </head>
 <body>
 	<nav class="navbar navbar-default">
@@ -58,7 +59,7 @@
         <p>
           I'd definetely recommend the <a href="https://itunes.apple.com/us/app/all-guitar-chords/id416947605?mt=8">All Chords</a> and <a href="https://itunes.apple.com/us/app/ultimate-guitar-chords-tabs/id357828853?mt=8">Tabs&Chords</a> apps to any beginners out there. The first one helps teach you fingering for all kinds of chords and the second one is great for getting the chords or tabs for tons of songs!
           <br>
-          <button type="button" class="btn btn-primary btn-sm read-btn" href="#">Read more</button>
+          <a href="guitarpost.html" type="button" class="btn btn-primary btn-sm read-btn" >Read more</a>
         </p>
           <div class="post-info1">
             <i class="glyphicon glyphicon-comment"></i> <a href="#">3 Comments</a>
@@ -163,7 +164,7 @@
     <div class="list-group">
       <button class="list-group-item" type="button">
         Fencing
-        <span class="badge badge-primary badge-pill">14</span>
+        <span class="badge badge-blue badge-pill">14</span>
       </button>
 
       <button class="list-group-item" type="button">
