a little change at skill list

--- a/skills_list.html
+++ b/skills_list.html
@@ -64,16 +64,16 @@
 		</div>
 
 		<div class="banner-layer" style="margin-left: -13px;">
-			<div class="navbar-form navbar-left">
-            	<button class="btn btn-default" data-toggle="modal" data-target="#myModal">
-					Add new skill
+			<div class="navbar-form navbar-right">
+            	<button class="btn btn-lg btn-info new-btn" data-toggle="modal" data-target="#myModal">
+					<i class="fa fa-plus"></i> Create a new skill
 				</button>
             </div>
             <form action="#" type="post" class="navbar-form navbar-left" role="search">
 		        <div class="form-group">
-		            <input id="searchtext" type="text" class="form-control" placeholder="Search">
+		            <input id="searchtext" type="text" class="form-control" placeholder="Find skills you like">
 		        </div>
-				<button class="btn btn-default" type="submit" onclick="search()">Find Groups</button>
+				<button class="btn btn-default" type="submit" onclick="search()">Submit</button>
 		    </form>
 		</div>
 		<br><br><br><br>
@@ -187,7 +187,7 @@
 					&times;
 				</button>
 				<h4 class="modal-title" id="myModalLabel">
-					Add a new skill
+					Create a new skill
 				</h4>
 			</div>
 			<div class="modal-body">
