change reconnect skill-list and homepage

--- a/homepage.html
+++ b/homepage.html
@@ -37,7 +37,7 @@
   				<h1 id = "title">Skill-It</h1>
   				<h3 id = "lead">Learn, track, and practice your skill the easy way!</h3>
   				<hr id="hr1">
-  				<form action="skills_list.html?#">
+  				<form action="/skills_list.html">
                      <button class="btn btn-default btn-lg"><i class="fa fa-graduation-cap" aria-hidden="true"></i> Go To Skills List!</button>
           </form>
 				</div>
