--- a/homepage.html
+++ b/homepage.html
@@ -8,7 +8,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 	<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	
+
 </head>
 <body>
 	<nav class="navbar navbar-default">
@@ -37,7 +37,7 @@
   				<h1 id = "title">Skill-It</h1>
   				<h3 id = "lead">Learn, track, and practice your skill the easy way!</h3>
   				<hr id="hr1">
-  				<form action="/skills_list.html">
+  				<form action="skills_list.html">
                      <button class="btn btn-default btn-lg"><i class="fa fa-graduation-cap" aria-hidden="true"></i> Go To Skills List!</button>
           </form>
 				</div>
@@ -64,18 +64,18 @@
                      <input class = "form-control inputText" type="password" placeholder="Enter Password" name="psw" required>
 
                      <input class = "form-control inputText" type="password" placeholder="Repeat Password" name="psw-repeat" required>
-                     
+
                       <button class="btn btn-primary form-btn" id= "next_step" type="button">NEXT</button>
                       <p>Already have an account?
                           <a href="#" data-dismiss="modal" data-toggle="modal" data-target="#logInModal">Log In Here</a></p>
                     </form>
                  </div>
                  <div class="modal-footer">
-                         <p>By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p>     
+                         <p>By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p>
                   </div>
               </div>
 
-              <div class="signUp-step-interest_picker"> 
+              <div class="signUp-step-interest_picker">
                   <div class="modal-header">
                      <button type="button" class="close" data-dismiss="modal">&times;</button>
                      <h2 class="modal-title">Find the good stuff</h2>
@@ -101,8 +101,8 @@
                           <button class="btn back-btn" id = "previous_step" type="button">BACK</button>
                           <button class="btn btn-primary form-btn" type="submit" id="submit-btn">SUBMIT</button>
                         </div>
-                    
-                   </div> 
+
+                   </div>
               </div>
            </div>
        </div>
@@ -127,6 +127,7 @@
                    </label>
                    <p>Don't have an account!
                         <a href="#" data-dismiss="modal" data-toggle="modal" data-target="#signUpModal"">Sign Up Here</a></p>
+                      </form>
            </div>
        </div>
    </div>
