--- a/guitarpost.html
+++ b/guitarpost.html
@@ -106,7 +106,7 @@
         <div class="row">
           <div class="col-md-1">
             <a href="#">
-                <img src="images/guitar1.jpg" class="img-thumbnail" alt="">
+                <img src="images/jackson.jpg" class="img-thumbnail" alt="">
             </a>
           </div>
           <div class="col-md-11">
@@ -124,12 +124,13 @@
           <div class="col-md-4">
             <p></p>
             <p>
-              <i class="glyphicon glyphicon-user"></i> by <a href="#">John</a>
+              <i class="glyphicon glyphicon-user"></i> by <a href="#">Chris</a>
               | <i class="glyphicon glyphicon-calendar"></i> Sept 16th, 2012
             </p>
           </div>
         </div>
         <hr>
+        <div class=container>
         <div class="row">
           <div class="col-md-1">
             <a href="#">
@@ -199,6 +200,7 @@
             </p>
           </div>
         </div>
+      </div>
           </div>
 
       </div>
