--- a/guitarpost.html
+++ b/guitarpost.html
@@ -69,7 +69,7 @@
             <div class="thumbnail">
               <div class="row">
           <div class="col-md-8">
-            <h4><strong><a href="#">Photos</a></strong></h4>
+            <h4><strong><a href="#">Photos/Videos</a></strong></h4>
           </div>
         </div>
         <hr>
