--- a/skills_list.html
+++ b/skills_list.html
@@ -40,8 +40,8 @@
                     <button type="button" class="btn btn-success" href="#">Logout</button>
                 </div>
                 <form class="navbar-form navbar-left">
-                  <a class="btn btn-primary" href="skills_list.html?" role="button">All Skills/Groups</a>
-                  <a href="#" data-toggle="modal" data-target="#exampleModalCenter"><span class="link-spanner"></span></a>
+                  <a class="btn btn-primary" href="skills_list.html" role="button">All Skills/Groups</a>
+                  <!-- <a href="#" data-toggle="modal" data-target="#exampleModalCenter"><span class="link-spanner"></span></a> -->
                 </form>
                 <!-- <div class="navbar-form navbar-left">
 	            	<button class="btn btn-default" data-toggle="modal" data-target="#myModal">
@@ -153,16 +153,16 @@
 			      </div>
 			    </div>
 			  </div>
-			  <div id="div8" class="col-sm-6 col-md-4">
+			  <!-- <div id="div8" class="col-sm-6 col-md-4">
 			    <div class="thumbnail">
-			      <img src="images/d6.jpg" alt="img">
+			      <a href="dancing_before.html"><img src="images/d6.jpg" alt="img"></a>
 			      <div class="caption">
 			        <h3>Dance</h3>
-			        <p><a href="#" class="btn btn-primary" role="button">Strategies</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			        <p><a href="dancing_before.html" class="btn btn-primary" role="button">Strategies</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 			        <a href="#" class="btn btn-primary" role="button">Groups</a> </p>
 			      </div>
 			    </div>
-			  </div>
+			  </div> -->
 			</div>
 		</div>
 	<!-- //cart's-Product-Display -->
@@ -217,11 +217,9 @@
 				</div>
 			</div>
 			<div class="modal-footer">
-				<button type="button" class="btn btn-default" data-dismiss="modal">close
+				<button type="button" class="btn btn-default" data-dismiss="modal">Close
 				</button>
-				<button type="button" class="btn btn-primary">
-					submit
-				</button>
+				<a class="btn btn-primary" href="skills_list_after.html" role="button">Create Skill</a>
 			</div>
 		</div><!-- /.modal-content -->
 	</div><!-- /.modal -->
