--- a/userpage.html
+++ b/userpage.html
@@ -23,8 +23,7 @@
                     <button type="button" class="btn btn-success" href="#">Logout</button>
                 </div>
                 <form class="navbar-form navbar-left">
-                  <a class="btn btn-primary" href="skills_list.html?" role="button">All Skills/Groups</a>
-                  <a href="#" data-toggle="modal" data-target="#exampleModalCenter"><span class="link-spanner"></span></a>
+                  <a class="btn btn-primary" href="skills_list.html" role="button">All Skills/Groups</a>
                 </form>
                 <div class="navbar-form navbar-left">
                 </div>
