--- a/dancingpost.html
+++ b/dancingpost.html
@@ -26,7 +26,7 @@
                     <button type="button" class="btn btn-success" href="#">Logout</button>
                 </div>
                 <form class="navbar-form navbar-left">
-                  <a class="btn btn-primary" href="skills_list.html" role="button">All Skills/Groups</a>
+                  <a class="btn btn-primary" href="skills_list_after.html" role="button">All Skills/Groups</a>
                 </form>
             </div>
         </nav>
