Added like buttons

--- a/dancing_after.html
+++ b/dancing_after.html
@@ -45,7 +45,7 @@
         <div class="thumbnail">
           <div class="row">
           <div class="col-md-12">
-            <h4><strong><a href="#">Cool Moonwalk Vido</a></strong></h4>
+            <h4><strong><a href="#">Cool Moonwalk Video</a></strong></h4>
             <hr>
           </div>
         </div>
@@ -77,8 +77,8 @@
           <div class="col-md-4">
             <p></p>
             <p>
-              <i class="glyphicon glyphicon-comment"></i> <a href="#">3 Comments</a>
-              | <i class="glyphicon glyphicon-thumbs-up"></i> <a href="#">4 Likes</a>
+              <i class="glyphicon glyphicon-comment"></i> <a href="#">0 Comments</a>
+              | <i class="glyphicon glyphicon-thumbs-up"></i> <a href="#">0 Likes</a>
             </p>
           </div>
         </div>
