--- a/dancingpost.html
+++ b/dancingpost.html
@@ -47,7 +47,7 @@
         <div class="thumbnail">
           <div class="row">
           <div class="col-md-12">
-            <h4><strong><a href="#">Cool Moonwalk Vido</a></strong></h4>
+            <h4><strong><a href="#">Cool Moonwalk Video</a></strong></h4>
             <hr>
           </div>
         </div>
@@ -64,6 +64,8 @@
               <br/>
               Check out this <a href="https://www.wikihow.com/Moonwalk">article</a> to learn how to do the moonwalk. It helped me a ton! The video <a href="https://youtu.be/E_FzgtLVzbI">here</a> is pretty aweseome too.
             </p>
+            <button type="button" class="btn btn-success" href="#">Like</button>
+            <p></p>
             <div class="thumbnail">
               <div class="row">
           <div class="col-md-8">
