--- a/guitarpost.html
+++ b/guitarpost.html
@@ -66,6 +66,8 @@
             </p>
             <p>I uploaded 2 pictures of what the apps looks like when you open them up just to give you a sneak peak :)
             </p>
+            <button type="button" class="btn btn-success" href="#">Like</button>
+            <p></p>
             <div class="thumbnail">
               <div class="row">
           <div class="col-md-8">
