--- a/homepage.html
+++ b/homepage.html
@@ -90,7 +90,7 @@
                         <li class="list-group-item"> <img class = "icon-img"src="images/d7.jpeg"> Leather Working <button type="button" class="btn btn-info subscribe-btn">subscribe</button></li>
                         <li class="list-group-item"> <img class = "icon-img"src="images/d3.jpg"> Ice Skating <button type="button" class="btn btn-info subscribe-btn">subscribe</button></li>
                         <li class="list-group-item"> <img class = "icon-img"src="images/d2.jpg">  Guitar Playing <button type="button" class="btn btn-info subscribe-btn">subscribe</button></li>
-                        <li class="list-group-item"> <img class = "icon-img"src="images/d6.jpg"> Dance <button type="button" class="btn btn-info subscribe-btn">subscribe</button></li>
+                        <!-- <li class="list-group-item"> <img class = "icon-img"src="images/d6.jpg"> Dance <button type="button" class="btn btn-info subscribe-btn">subscribe</button></li> -->
                       </ul>
                       <div class="progress">
                         <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 0%;">
